# zenoh_dual_topic

./: docker-compose.yml  pyproject.toml
docker/: Dockerfile.python
protos/: topic_a.proto  topic_b.proto
src/: log.py  main.py  publisher.py
