[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zenoh-dual-topic-demo"
version = "0.1.0"
description = "Zenoh dual-topic pairing demo"
requires-python = ">=3.11"
dependencies = [
  "eclipse-zenoh==1.0.0",
  "protobuf>=7.0.0",
]

[tool.setuptools]
py-modules = ["main", "publisher", "log"]
package-dir = {"" = "src"}
